# airflow-dbt-project

./: README.md  pyproject.toml
docker/: docker-compose.yml
src/data_generation/: data_generation.py
telco_project/: dbt_project.yml  package-lock.yml  packages.yml
telco_project/models/mart/: _mart__models.yml  mart_billing_status.sql  mart_customers.sql  mart_fct_billing.sql  mart_fct_movements.sql
telco_project/models/staging/: _stg__models.yml
telco_project/models/staging/dimension/: stg_campaigns.sql  stg_customers.sql  stg_date.sql  stg_products.sql
telco_project/models/staging/fact/: stg_billing.sql  stg_campaign_dispatches.sql  stg_movements.sql  stg_support_tickets.sql  stg_usage.sql
telco_project/seeds/: dim_campaign.csv  dim_customer.csv  dim_product.csv  fact_billing.csv  fact_campaign_dispatch.csv  fact_movement.csv  fact_support_tickets.csv  fact_usage.csv
